<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xomorod.location.AddActivity">

    <LinearLayout
        android:id="@+id/llAddActivity"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/enter_location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLocationName"
          />
    <LinearLayout
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/font_size_m"
            android:text="@string/latitude"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/font_size_m"
            android:text="@string/longitude"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/font_size_m"
            android:text="@string/accuracy"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/font_size_m"
            android:id="@+id/txtLat"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/font_size_m"
            android:id="@+id/txtLong"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/font_size_m"
            android:id="@+id/txtAccuracy"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_list"
        android:id="@+id/btnAdd" />
    <TextView
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_m"
        android:id="@+id/txtError"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</LinearLayout>
