<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="5dp"
            android:gravity="center"
            android:textSize="24sp"
            android:id="@+id/txtLocationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/font_size_m"
                android:text="@string/latitude"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="@dimen/font_size_m"
                android:text="@string/longitude"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="@dimen/font_size_m"
                android:text="@string/accuracy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/font_size_m"
                android:id="@+id/txtLat"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="@dimen/font_size_m"
                android:id="@+id/txtLong"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="@dimen/font_size_m"
                android:id="@+id/txtAccuracy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

